# aigc_infer

./: .gitignore  README.md  README_CN.md  main.py  pyproject.toml  requirements.txt  run_qwen_image_edit.py  run_qwen_image_t2i.py
scripts/: profile_commands.sh  run_diffusers_image_edit.py  run_diffusers_image_t2i.py  run_qwen_image_edit.py  run_qwen_image_t2i.py
tests/: bench_diffusers_t2i.py  bench_sglang_t2i.py
